syntax = "proto3";

package myapp.abslayer;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "myapp/abslayer/params.proto";
import "cosmos/base/v1beta1/coin.proto";


option go_package = "github.com/kiarash-naderi/myapp/x/abslayer/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // SendToken handles the sending of tokens between addresses
  rpc SendToken(MsgSendToken) returns (MsgSendTokenResponse); // اضافه کردن این خط
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "myapp/x/abslayer/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgSendToken defines a message for sending tokens // اضافه کردن پیام MsgSendToken
message MsgSendToken {
  string sender = 1;
  string receiver = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
}

// Response after sending tokens // اضافه کردن پیام MsgSendTokenResponse
message MsgSendTokenResponse {}
